--- a/src/main/webapp/easyui/my/i18n/i18n_cn.json
+++ b/src/main/webapp/easyui/my/i18n/i18n_cn.json
@@ -5,5 +5,6 @@
   "user.loginOut": "注销",
   "table.add": "添加",
   "table.edit": "编辑",
-  "table.delete": "删除"
+  "table.delete": "删除",
+  "permission.title": "权限信息cn"
 }
