--- a/src/main/resources/messages/message_en_US.properties
+++ b/src/main/resources/messages/message_en_US.properties
@@ -1,5 +1,4 @@
 # с╒нд
-
 ## COMMON
 common.edit=Edit
 common.add=Add
@@ -18,20 +17,27 @@ common.confirm=Confirm
 common.cancel=Cancel
 common.submit=Submit
 common.reset=Reset
-
+common.search=Query
+common.status=Status
+common.createTime=Create Time
+common.updateTime=Update Time
+common.option=Option
+common.un=unknown
 ## Menus
 menu.system=System Management
 menu.user=User Management
 menu.role=Role Management
 menu.permission=Permission Management
-menu.stock=Stock Management
-menu.stockIn=Stock In Management
-
+menu.inventory=Inventory Management
+menu.stock=Warehouse Management
 ## Message
 message.delete=Confirm the deletion
 message.select=Please select at least one piece of data
 message.input=The input item is a must - lose item
-
+## Status
+status.normal=normal
+status.disable=disable
+status.lock=lock
 ## Permission
 permission.name=Permission Name
 permission.icon=Permission Icon
@@ -39,5 +45,19 @@ permission.resource=Permission Resource
 permission.type=Permission Types
 permission.string=Permission String
 permission.desc=Permissions Described
-permission.option=Rights Option
+## Role
+role.name=Role Name
+role.desc=Role described
+role.code=Role Code
+role.permissions=Role Permission
+## User
+user.name=User Name
+user.email=User Email
+user.phone=User Phone
+user.roles=User Roles
+## Stock
+stock.name=Stock Name
+stock.desc=Stock described
+
+
 
