--- a/src/main/resources/messages/message_zh_CN.properties
+++ b/src/main/resources/messages/message_zh_CN.properties
@@ -1,5 +1,4 @@
 # ÖÐÎÄ
-
 ## COMMON
 common.edit=&#32534;&#36753;
 common.add=&#26032;&#22686;
@@ -17,20 +16,27 @@ common.message=&#28040;&#24687;
 common.cancel=&#21462;&#28040;
 common.submit=&#25552;&#20132;
 common.reset=&#28165;&#31354;
-
+common.search=&#26597;&#35810;
+common.status=&#29366;&#24577;
+common.createTime=&#21019;&#24314;&#26102;&#38388;
+common.updateTime=&#26356;&#26032;&#26102;&#38388;
+common.option=&#25805;&#20316;
+common.un=&#26410;&#30693;
 ## Menus
 menu.system=&#31995;&#32479;&#31649;&#29702;
 menu.user=&#29992;&#25143;&#31649;&#29702;
 menu.role=&#35282;&#33394;&#31649;&#29702;
 menu.permission=&#26435;&#38480;&#31649;&#29702;
-menu.stock=&#24211;&#23384;&#31649;&#29702;
-menu.stockIn=Stock In Management
-
+menu.inventory=&#24211;&#23384;&#31649;&#29702;
+menu.stock=&#20179;&#24211;&#31649;&#29702;
 ## Message
 message.delete=&#30830;&#35748;&#21024;&#38500;&#10;&#10;
 message.select=&#35831;&#33267;&#23569;&#36873;&#20013;&#19968;&#26465;&#25968;&#25454;&#10;&#10;
 message.input=&#35813;&#36755;&#20837;&#39033;&#20026;&#24517;&#36755;&#39033;
-
+## Status
+status.normal=&#27491;&#24120;
+status.disable=&#20572;&#29992;
+status.lock=&#38145;&#23450;&#10;&#10;
 ## Permission
 permission.module=&#26435;&#38480;&#31649;&#29702;&#10;&#10;
 permission.name=&#26435;&#38480;&#21517;&#31216;
@@ -39,8 +45,19 @@ permission.resource=&#36164;&#28304;&#22320;&#22336;
 permission.type=&#36164;&#28304;&#31867;&#22411;
 permission.string=&#26435;&#38480;&#23383;&#31526;&#20018;
 permission.desc=&#26435;&#38480;&#25551;&#36848;
-permission.option=&#25805;&#20316;
-
+## Role
+role.name=&#35282;&#33394;&#21517;&#31216;
+role.desc=&#35282;&#33394;&#25551;&#36848;
+role.code=&#35282;&#33394;&#20195;&#30721;
+role.permissions=&#26435;&#38480;&#21015;&#34920;
+## User
+user.name=&#29992;&#25143;&#21517;
+user.email=&#30005;&#23376;&#37038;&#31665;
+user.phone=&#25163;&#26426;&#21495;&#30721;
+user.roles=&#35282;&#33394;&#21015;&#34920;&#10;&#10;
+## Stock
+stock.name=&#24211;&#23384;&#31649;&#29702;&#10;
+stock.desc=stock.desc=&#20179;&#24211;&#25551;&#36848;
 
 
 
