--- a/src/main/resources/messages/message_zh_CN.properties
+++ b/src/main/resources/messages/message_zh_CN.properties
@@ -57,7 +57,7 @@ user.phone=&#25163;&#26426;&#21495;&#30721;
 user.roles=&#35282;&#33394;&#21015;&#34920;&#10;&#10;
 ## Stock
 stock.name=&#24211;&#23384;&#31649;&#29702;&#10;
-stock.desc=stock.desc=&#20179;&#24211;&#25551;&#36848;
+stock.desc=&#20179;&#24211;&#25551;&#36848;
 
 
 
