【商品管理】商品类别

--- a/src/main/resources/messages/message_en_US.properties
+++ b/src/main/resources/messages/message_en_US.properties
@@ -30,6 +30,9 @@ menu.role=Role Management
 menu.permission=Permission Management
 menu.inventory=Inventory Management
 menu.stock=Warehouse Management
+menu.product=Product Management
+menu.product.info=Commodity Information
+menu.product.type=Commodity Categories
 ## Message
 message.delete=Confirm the deletion
 message.select=Please select at least one piece of data
@@ -58,6 +61,7 @@ user.roles=User Roles
 ## Stock
 stock.name=Stock Name
 stock.desc=Stock described
-
+## Product Type
+product.type.name=Category Name
 
 
