--- a/src/main/resources/messages/message_zh_CN.properties
+++ b/src/main/resources/messages/message_zh_CN.properties
@@ -29,6 +29,9 @@ menu.role=&#35282;&#33394;&#31649;&#29702;
 menu.permission=&#26435;&#38480;&#31649;&#29702;
 menu.inventory=&#24211;&#23384;&#31649;&#29702;
 menu.stock=&#20179;&#24211;&#31649;&#29702;
+menu.product=&#21830;&#21697;&#31649;&#29702;
+menu.product.info=&#21830;&#21697;&#20449;&#24687;
+menu.product.type=&#21830;&#21697;&#31867;&#21035;
 ## Message
 message.delete=&#30830;&#35748;&#21024;&#38500;&#10;&#10;
 message.select=&#35831;&#33267;&#23569;&#36873;&#20013;&#19968;&#26465;&#25968;&#25454;&#10;&#10;
@@ -58,6 +61,8 @@ user.roles=&#35282;&#33394;&#21015;&#34920;&#10;&#10;
 ## Stock
 stock.name=&#24211;&#23384;&#31649;&#29702;&#10;
 stock.desc=&#20179;&#24211;&#25551;&#36848;
+## Product Type
+product.type.name=&#31867;&#21035;&#21517;&#31216;
 
 
 
