云强ERP（修复权限列表不显示问题）

--- a/src/main/resources/messages/message_zh_CN.properties
+++ b/src/main/resources/messages/message_zh_CN.properties
@@ -13,6 +13,7 @@ common.logout=&#27880;&#38144;
 common.lang=&#35821;&#35328;&#10;
 common.home=&#39318;&#39029;&#10;
 common.message=&#28040;&#24687;
+common.confirm=&#30830;&#23450;
 common.cancel=&#21462;&#28040;
 common.submit=&#25552;&#20132;
 common.reset=&#28165;&#31354;
