--- a/src/main/resources/messages/message_en_US.properties
+++ b/src/main/resources/messages/message_en_US.properties
@@ -24,15 +24,16 @@ common.updateTime=Update Time
 common.option=Option
 common.un=unknown
 ## Menus
-menu.system=System Management
-menu.user=User Management
-menu.role=Role Management
-menu.permission=Permission Management
-menu.inventory=Inventory Management
-menu.stock=Warehouse Management
-menu.product=Product Management
-menu.product.info=Commodity Information
-menu.product.type=Commodity Categories
+mu.res=System Resources Management
+mu.sys=System Management
+mu.sys.user=User Management
+mu.sys.role=Role Management
+mu.sys.right=Permission Management
+mu.st=Inventory Management
+mu.st.info=Warehouse Management
+mu.pt=Product Management
+mu.pt.info=Commodity Information
+mu.pt.type=Commodity Categories
 ## Message
 message.delete=Confirm the deletion
 message.select=Please select at least one piece of data
