--- a/src/main/resources/messages/message_zh_CN.properties
+++ b/src/main/resources/messages/message_zh_CN.properties
@@ -24,15 +24,16 @@ common.updateTime=&#26356;&#26032;&#26102;&#38388;
 common.option=&#25805;&#20316;
 common.un=&#26410;&#30693;
 ## Menus
-menu.system=&#31995;&#32479;&#31649;&#29702;
-menu.user=&#29992;&#25143;&#31649;&#29702;
-menu.role=&#35282;&#33394;&#31649;&#29702;
-menu.permission=&#26435;&#38480;&#31649;&#29702;
-menu.inventory=&#24211;&#23384;&#31649;&#29702;
-menu.stock=&#20179;&#24211;&#31649;&#29702;
-menu.product=&#21830;&#21697;&#31649;&#29702;
-menu.product.info=&#21830;&#21697;&#20449;&#24687;
-menu.product.type=&#21830;&#21697;&#31867;&#21035;
+mu.res=&#36164;&#28304;
+mu.sys=&#31995;&#32479;&#31649;&#29702;
+mu.sys.user=&#29992;&#25143;&#31649;&#29702;
+mu.sys.role=&#35282;&#33394;&#31649;&#29702;
+mu.sys.right=&#26435;&#38480;&#31649;&#29702;
+mu.st=&#24211;&#23384;&#31649;&#29702;
+mu.st.info=&#20179;&#24211;&#31649;&#29702;
+mu.pt=&#21830;&#21697;&#31649;&#29702;
+mu.pt.info=&#21830;&#21697;&#20449;&#24687;
+mu.pt.type=&#21830;&#21697;&#31867;&#21035;
 ## Message
 message.delete=&#30830;&#35748;&#21024;&#38500;&#10;&#10;
 message.select=&#35831;&#33267;&#23569;&#36873;&#20013;&#19968;&#26465;&#25968;&#25454;&#10;&#10;
