【新增】新增商品属性管理

--- a/src/main/resources/messages/message_en_US.properties
+++ b/src/main/resources/messages/message_en_US.properties
@@ -21,8 +21,14 @@ common.search=Query
 common.status=Status
 common.createTime=Create Time
 common.updateTime=Update Time
+common.remark=Remark
 common.option=Option
 common.un=unknown
+common.accord=According to
+common.sales=Sales
+common.mode.text=The text box
+common.mode.select=The drop-down list
+common.mode.checkbox=Check box
 ## Menus
 mu.res=System Resources Management
 mu.sys=System Management
@@ -34,6 +40,8 @@ mu.st.info=Warehouse Management
 mu.pt=Product Management
 mu.pt.info=Commodity Information
 mu.pt.type=Commodity Categories
+mu.pt.prop=Product Property Setting
+mu.pt.ppv=Property option value
 ## Message
 message.delete=Confirm the deletion
 message.select=Please select at least one piece of data
@@ -64,5 +72,13 @@ stock.name=Stock Name
 stock.desc=Stock described
 ## Product Type
 product.type.name=Category Name
+## Product Prop
+product.prop.name=Property Name
+product.prop.type=Type
+product.prop.mode=The input mode
+product.prop.inputType=The input type
+## Product Prop Value
+product.ppv.name=The option value
+product.ppv.icon=Icon
 
 
