--- a/src/main/resources/messages/message_zh_CN.properties
+++ b/src/main/resources/messages/message_zh_CN.properties
@@ -21,8 +21,14 @@ common.search=&#26597;&#35810;
 common.status=&#29366;&#24577;
 common.createTime=&#21019;&#24314;&#26102;&#38388;
 common.updateTime=&#26356;&#26032;&#26102;&#38388;
+common.remark=&#22791;&#27880;
 common.option=&#25805;&#20316;
 common.un=&#26410;&#30693;
+common.accord=&#26174;&#31034;
+common.sales=&#38144;&#21806;
+common.mode.text=&#25991;&#26412;&#26694;&#10;
+common.mode.select=&#19979;&#25289;&#21015;&#34920;&#10;
+common.mode.checkbox=&#22797;&#36873;&#26694;&#10;
 ## Menus
 mu.res=&#36164;&#28304;
 mu.sys=&#31995;&#32479;&#31649;&#29702;
@@ -34,6 +40,8 @@ mu.st.info=&#20179;&#24211;&#31649;&#29702;
 mu.pt=&#21830;&#21697;&#31649;&#29702;
 mu.pt.info=&#21830;&#21697;&#20449;&#24687;
 mu.pt.type=&#21830;&#21697;&#31867;&#21035;
+mu.pt.prop=&#21830;&#21697;&#23646;&#24615;
+mu.pt.ppv=&#23646;&#24615;&#36873;&#39033;&#20540;
 ## Message
 message.delete=&#30830;&#35748;&#21024;&#38500;&#10;&#10;
 message.select=&#35831;&#33267;&#23569;&#36873;&#20013;&#19968;&#26465;&#25968;&#25454;&#10;&#10;
@@ -65,6 +73,14 @@ stock.name=&#24211;&#23384;&#31649;&#29702;&#10;
 stock.desc=&#20179;&#24211;&#25551;&#36848;
 ## Product Type
 product.type.name=&#31867;&#21035;&#21517;&#31216;
+## Product Prop
+product.prop.name=&#23646;&#24615;&#21517;
+product.prop.type=&#31867;&#22411;
+product.prop.mode=&#36755;&#20837;&#27169;&#24335;
+product.prop.inputType=&#36755;&#20837;&#31867;&#22411;
+## Product Prop Value
+product.ppv.name=&#36873;&#39033;&#20540;
+product.ppv.icon=&#22270;&#26631;
 
 
 
