【优化】优化库存管理、权限管理、商品类目管理的部分页面. 【修复】修复库存管理、权限管理、商品类目管理的页面BUG.

--- a/src/main/resources/messages/message_en_US.properties
+++ b/src/main/resources/messages/message_en_US.properties
@@ -29,6 +29,12 @@ common.sales=Sales
 common.mode.text=The text box
 common.mode.select=The drop-down list
 common.mode.checkbox=Check box
+common.tree.append=Append
+common.tree.remove=Remove
+common.tree.expand=Expand
+common.tree.collapse=collapse
+common.tree.reload=reload
+common.tree.node=new node
 ## Menus
 mu.res=System Resources Management
 mu.sys=System Management
@@ -52,11 +58,13 @@ status.disable=disable
 status.lock=lock
 ## Permission
 permission.name=Permission Name
+permission.parent=Parent Permission
 permission.icon=Permission Icon
 permission.resource=Permission Resource
 permission.type=Permission Types
 permission.string=Permission String
 permission.desc=Permissions Described
+permission.sort=Sort
 ## Role
 role.name=Role Name
 role.desc=Role described
@@ -69,9 +77,12 @@ user.phone=User Phone
 user.roles=User Roles
 ## Stock
 stock.name=Stock Name
+stock.parent=Parent Stock
 stock.desc=Stock described
 ## Product Type
 product.type.name=Category Name
+product.type.parent=Parent Category
+product.type.sort=Sort
 ## Product Prop
 product.prop.name=Property Name
 product.prop.type=Type
