--- a/src/main/resources/messages/message_zh_CN.properties
+++ b/src/main/resources/messages/message_zh_CN.properties
@@ -29,6 +29,12 @@ common.sales=&#38144;&#21806;
 common.mode.text=&#25991;&#26412;&#26694;&#10;
 common.mode.select=&#19979;&#25289;&#21015;&#34920;&#10;
 common.mode.checkbox=&#22797;&#36873;&#26694;&#10;
+common.tree.append=&#28155;&#21152;&#23376;&#33410;&#28857;
+common.tree.remove=&#21024;&#38500;&#33410;&#28857;
+common.tree.expand=&#23637;&#24320;
+common.tree.collapse=&#25910;&#32553;
+common.tree.reload=&#21047;&#26032
+common.tree.node=&#26032;&#24314;&#33410;&#28857;
 ## Menus
 mu.res=&#36164;&#28304;
 mu.sys=&#31995;&#32479;&#31649;&#29702;
@@ -52,12 +58,14 @@ status.disable=&#20572;&#29992;
 status.lock=&#38145;&#23450;&#10;&#10;
 ## Permission
 permission.module=&#26435;&#38480;&#31649;&#29702;&#10;&#10;
+permission.parent=&#29238;&#26435;&#38480;
 permission.name=&#26435;&#38480;&#21517;&#31216;
 permission.icon=&#33756;&#21333;&#22270;&#26631;
 permission.resource=&#36164;&#28304;&#22320;&#22336;
 permission.type=&#36164;&#28304;&#31867;&#22411;
 permission.string=&#26435;&#38480;&#23383;&#31526;&#20018;
 permission.desc=&#26435;&#38480;&#25551;&#36848;
+permission.sort=&#25490;&#24207;
 ## Role
 role.name=&#35282;&#33394;&#21517;&#31216;
 role.desc=&#35282;&#33394;&#25551;&#36848;
@@ -69,10 +77,13 @@ user.email=&#30005;&#23376;&#37038;&#31665;
 user.phone=&#25163;&#26426;&#21495;&#30721;
 user.roles=&#35282;&#33394;&#21015;&#34920;&#10;&#10;
 ## Stock
-stock.name=&#24211;&#23384;&#31649;&#29702;&#10;
+stock.name=&#20179;&#24211;&#21517;&#31216;
+stock.parent=&#29238;&#20179;&#24211;
 stock.desc=&#20179;&#24211;&#25551;&#36848;
 ## Product Type
 product.type.name=&#31867;&#21035;&#21517;&#31216;
+product.type.parent=&#29238;&#31867;
+product.type.sort=&#25490;&#24207;
 ## Product Prop
 product.prop.name=&#23646;&#24615;&#21517;
 product.prop.type=&#31867;&#22411;
