【新增】添加商品点单功能.

--- a/src/main/resources/messages/message_en_US.properties
+++ b/src/main/resources/messages/message_en_US.properties
@@ -44,6 +44,7 @@ mu.sys.role=Role Management
 mu.sys.right=Permission Management
 mu.st=Inventory Management
 mu.st.info=Warehouse Management
+mu.st.out=Stock Out
 mu.pt=Product Management
 mu.pt.info=Commodity Information
 mu.pt.type=Commodity Categories
