--- a/src/main/resources/messages/message_zh_CN.properties
+++ b/src/main/resources/messages/message_zh_CN.properties
@@ -44,6 +44,7 @@ mu.sys.role=&#35282;&#33394;&#31649;&#29702;
 mu.sys.right=&#26435;&#38480;&#31649;&#29702;
 mu.st=&#24211;&#23384;&#31649;&#29702;
 mu.st.info=&#20179;&#24211;&#31649;&#29702;
+mu.st.out=&#21830;&#21697;&#20986;&#24211;
 mu.pt=&#21830;&#21697;&#31649;&#29702;
 mu.pt.info=&#21830;&#21697;&#20449;&#24687;
 mu.pt.type=&#21830;&#21697;&#31867;&#21035;
