【新增】订单管理.

--- a/src/main/resources/messages/message_zh_CN.properties
+++ b/src/main/resources/messages/message_zh_CN.properties
@@ -50,6 +50,8 @@ mu.pt.info=&#21830;&#21697;&#20449;&#24687;
 mu.pt.type=&#21830;&#21697;&#31867;&#21035;
 mu.pt.prop=&#21830;&#21697;&#23646;&#24615;
 mu.pt.ppv=&#23646;&#24615;&#36873;&#39033;&#20540;
+mu.order=&#35746;&#21333;&#31649;&#29702;
+mu.order.pt=&#21830;&#21697;&#35746;&#21333;
 ## Message
 message.delete=&#30830;&#35748;&#21024;&#38500;&#10;&#10;
 message.select=&#35831;&#33267;&#23569;&#36873;&#20013;&#19968;&#26465;&#25968;&#25454;&#10;&#10;
