【新增】新增店员季报.

--- a/src/main/resources/messages/message_zh_CN.properties
+++ b/src/main/resources/messages/message_zh_CN.properties
@@ -59,6 +59,7 @@ mu.region.stock.daily=&#21306;&#22495;&#24215;&#38271;&#27599;&#26085;&#36164;&#
 mu.stock.quarterly=&#38646;&#21806;&#24215;&#21592;&#23395;&#24230;&#25253;&#34920;
 mu.wms.stock.quarterly=&#20179;&#24211;&#24215;&#21592;&#23395;&#24230;&#25253;&#34920;
 mu.region.stock.quarterly=&#21306;&#22495;&#24215;&#38271;&#23395;&#24230;&#25253;&#34920;
+mu.order.verify=&#35746;&#21333;&#23457;&#26680;
 ## Message
 message.delete=&#30830;&#35748;&#21024;&#38500;&#10;&#10;
 message.select=&#35831;&#33267;&#23569;&#36873;&#20013;&#19968;&#26465;&#25968;&#25454;&#10;&#10;
