--- a/src/main/resources/messages/message_zh_CN.properties
+++ b/src/main/resources/messages/message_zh_CN.properties
@@ -60,6 +60,7 @@ mu.stock.quarterly=&#38646;&#21806;&#24215;&#21592;&#23395;&#24230;&#25253;&#349
 mu.wms.stock.quarterly=&#20179;&#24211;&#24215;&#21592;&#23395;&#24230;&#25253;&#34920;
 mu.region.stock.quarterly=&#21306;&#22495;&#24215;&#38271;&#23395;&#24230;&#25253;&#34920;
 mu.order.verify=&#35746;&#21333;&#23457;&#26680;
+mu.trade.stock=&#36152;&#26131;&#37319;&#36141;
 ## Message
 message.delete=&#30830;&#35748;&#21024;&#38500;&#10;&#10;
 message.select=&#35831;&#33267;&#23569;&#36873;&#20013;&#19968;&#26465;&#25968;&#25454;&#10;&#10;
