【新增】新增店员季报.

--- a/src/main/resources/messages/message_zh_CN.properties
+++ b/src/main/resources/messages/message_zh_CN.properties
@@ -65,6 +65,12 @@ mu.trade.stock=&#36152;&#26131;&#37319;&#36141;
 message.delete=&#30830;&#35748;&#21024;&#38500;&#10;&#10;
 message.select=&#35831;&#33267;&#23569;&#36873;&#20013;&#19968;&#26465;&#25968;&#25454;&#10;&#10;
 message.input=&#35813;&#36755;&#20837;&#39033;&#20026;&#24517;&#36755;&#39033;
+message.remove.cart=&#26159;&#21542;&#20174;&#36141;&#29289;&#36710;&#20013;&#31227;&#38500;&#25152;&#21246;&#36873;&#30340;&#21830;&#21697;
+message.goods.in.success=&#21830;&#21697;&#23548;&#20837;&#25104;&#21151;
+message.goods.in.fail=&#21830;&#21697;&#23548;&#20837;&#22833;&#36133;
+message.select.file=&#36873;&#25321;&#25991;&#20214;
+message.confirm=&#30830;&#35748;
+message.cancel=&#21462;&#28040;
 ## Status
 status.normal=&#27491;&#24120;
 status.disable=&#20572;&#29992;
@@ -136,6 +142,54 @@ sku.supplier=&#20379;&#24212;&#21830;
 sku.availableStock=&#21487;&#29992;&#24211;&#23384;
 sku.frozenStock=&#38145;&#23450;&#24211;&#23384;
 sku.skuMainPic=&#22270;&#29255;
-
+## Stock Out
+st.out.product=&#21830;&#21697;&#21517;
+st.out.property=&#23646;&#24615;&#21517;
+st.out.add.cart=&#21152;&#20837;&#36141;&#29289;&#36710;
+st.out.view.assess=&#26597;&#30475;&#35780;&#20215;
+st.out.cart=&#36141;&#29289;&#36710;
+st.out.image=&#22270;&#29255;
+st.out.amount=&#25968;&#37327;
+st.out.confirm.order=&#25552;&#20132;&#35746;&#21333;
+st.out.remark=&#22791;&#27880;
+st.out.volume.total=&#24635;&#20307;&#31215;
+st.out.total=&#24635;&#35745;
+## Trade Stock
+trade.stock.qgtime=&#35831;&#36141;&#26102;&#38388;
+trade.stock.uplaodqgtime=&#19978;&#20256;&#35831;&#36141;&#21333;&#30340;&#26102;&#38388;
+trade.stock.gwqgtime=&#22269;&#22806;&#35831;&#36141;&#26102;&#38388;
+trade.stock.gwcgfh=&#22269;&#20869;&#37319;&#36141;&#30830;&#35748;&#21457;&#36135;&#21333;
+trade.stock.qrtime=&#30830;&#35748;&#26102;&#38388;
+trade.stock.qrcgtime=&#30830;&#35748;&#35831;&#36141;&#21333;&#26102;&#38388;
+trade.stock.qrdh=&#26159;&#21542;&#21040;&#36135;
+trade.stock.qg=&#35831;&#36141;
+trade.stock.cg=&#37319;&#36141;
+trade.stock.finished=&#23436;&#25104;&#10;
+trade.stock.waitsh=&#24453;&#23457;&#26680;
+trade.stock.send=&#24453;&#21457;&#36135;
+trade.stock.recive=&#24050;&#21040;&#36135;
+trade.stock.qgorder=&#35831;&#36141;&#21333;
+trade.stock.cgorder=&#37319;&#36141;&#21333;
+trade.stock.wmqgorder=&#22806;&#36152;&#35831;&#36141;&#21333;
+trade.stock.wmcgorder=&#22806;&#36152;&#37319;&#36141;&#21333;
+trade.stock.upload.cgorder=&#19978;&#20256;&#37319;&#36141;&#21333;
+trade.stock.type=&#31867;&#22411;
+trade.stock.type1=&#22806;&#36152;&#47;&#30334;&#36135;&#31867;
+trade.stock.type2=&#112;&#101;&#231;&#97;&#115;
+trade.stpck.uplaod.upload.cgorder=&#19978;&#20256;&#37319;&#36141;&#21333;
+## Order
+order.sn=&#35746;&#21333;&#21495;
+order.store=&#38646;&#21806;&#24215;
+order.state=&#35746;&#21333;&#29366;&#24577;
+order.price.total=&#37329;&#39069;&#24635;&#35745;
+order.submit.time=&#19979;&#21333;&#26102;&#38388;
+order.detail=&#26126;&#32454;
+order.send=&#21457;&#36135;
+order.print=&#25171;&#21360;
+order.state.dsp=&#24453;&#23457;&#25209;
+order.state.dfh=&#24453;&#21457;&#36135;
+order.state.dsh=&#24453;&#25910;&#36135;
+order.state.ddwc=&#35746;&#21333;&#23436;&#25104;
+order.state.ddgb=&#35746;&#21333;&#20851;&#38381;
 
 
