【新增】新增店员季报.

--- a/src/main/resources/messages/message_zh_CN.properties
+++ b/src/main/resources/messages/message_zh_CN.properties
@@ -95,6 +95,7 @@ user.name=&#29992;&#25143;&#21517;
 user.email=&#30005;&#23376;&#37038;&#31665;
 user.phone=&#25163;&#26426;&#21495;&#30721;
 user.roles=&#35282;&#33394;&#21015;&#34920;&#10;&#10;
+user.btn.mpass=&#20462;&#25913;&#23494;&#30721;
 ## Stock
 stock.name=&#20179;&#24211;&#21517;&#31216;
 stock.parent=&#29238;&#20179;&#24211;
@@ -129,6 +130,7 @@ product.viewProperties=&#21830;&#21697;&#26174;&#31034;&#23646;&#24615;
 product.properties=&#21830;&#21697;&#23646;&#24615;&#38598;
 product.resources=&#22270;&#29255;
 product.remark=&#22791;&#27880;
+product.btn.import=&#25209;&#37327;&#23548;&#20837;
 ## SKU
 sku.add=&#28155;&#21152;&#83;&#107;&#117;
 sku.skuId=&#36135;&#21697;&#32534;&#30721;
@@ -191,5 +193,23 @@ order.state.dfh=&#24453;&#21457;&#36135;
 order.state.dsh=&#24453;&#25910;&#36135;
 order.state.ddwc=&#35746;&#21333;&#23436;&#25104;
 order.state.ddgb=&#35746;&#21333;&#20851;&#38381;
+order.confirm.time=&#35746;&#21333;&#23436;&#25104;&#26102;&#38388;
+order.comment.time=&#35746;&#21333;&#23436;&#25104;&#26102;&#38388;
+order.btn.recive=&#30830;&#35748;&#25910;&#36135;
+order.btn.commit=&#35780;&#20215;
+## Order Detail
+order.detail.list=&#68;&#101;&#116;&#97;&#108;&#108;&#101;&#115;&#32;&#100;&#101;&#108;&#32;&#112;&#101;&#100;&#105;&#100;&#111;
+order.detail.image=&#22270;&#29255;
+order.detail.ptname=&#21830;&#21697;&#21517;
+order.detail.property=&#23646;&#24615;
+order.detail.amount=&#69;&#108;&#32;&#110;&#250;&#109;&#101;&#114;&#111;&#32;&#100;&#101;
+order.detail.volume.total=&#24635;&#20307;&#31215;
+## Commit
+commit.waitcommit=&#24050;&#35780;&#20215;
+commit.finishcommit=&#24050;&#35780;&#20215;
+commit.dialog.order.commit=&#35746;&#21333;&#35780;&#20215;
+commit.entity.score=&#35780;&#20998;
+commit.entity.commit=&#35780;&#35770;
+commit.dialog.name=&#35746;&#21333;&#35780;&#20215;
 
 
