【新增】新增店员季报.

--- a/src/main/resources/messages/message_zh_CN.properties
+++ b/src/main/resources/messages/message_zh_CN.properties
@@ -71,6 +71,9 @@ message.goods.in.fail=&#21830;&#21697;&#23548;&#20837;&#22833;&#36133;
 message.select.file=&#36873;&#25321;&#25991;&#20214;
 message.confirm=&#30830;&#35748;
 message.cancel=&#21462;&#28040;
+message.fail=&#22833;&#36133;
+message.success=&#25104;&#21151;
+message.daily.make.detail=&#26159;&#21542;&#26032;&#24314;&#21306;&#22495;&#24403;&#26085;&#36164;&#37329;&#20986;&#36134;&#26126;&#32454;
 ## Status
 status.normal=&#27491;&#24120;
 status.disable=&#20572;&#29992;
@@ -211,5 +214,22 @@ commit.dialog.order.commit=&#35746;&#21333;&#35780;&#20215;
 commit.entity.score=&#35780;&#20998;
 commit.entity.commit=&#35780;&#35770;
 commit.dialog.name=&#35746;&#21333;&#35780;&#20215;
-
+## stock
+region.stock.daily.in=&#36827;
+region.stock.daily.out=&#25903;&#20986;
+region.stock.daily.store=&#38646;&#21806;&#24215;
+region.stock.daily.income=&#26085;&#25910;&#20837;
+region.stock.daily.income.total=&#32047;&#35745;&#24635;&#39069;
+region.stock.daily.type=&#31867;&#21035;
+region.stock.daily.project=&#39033;&#30446;
+region.stock.daily.price=&#37329;&#39069;
+region.stock.daily.exprice.total=&#25903;&#20986;&#24635;&#35745;
+region.stock.daily.safe=&#20445;&#38505;&#26588;&#29616;&#37329;
+region.stock.daily.deposit=&#23384;
+region.stock.daily.cal=&#35745;&#31639;
+region.stock.daily.zcmx=&#26032;&#22686;&#25903;&#20986;&#26126;&#32454;
+region.stock.daily.bjzcmx=&#26032;&#22686;&#25903;&#20986;&#26126;&#32454;
+region.stock.daily.datatime=&#26085;&#26399;
+region.stock.daily.bank=&#23384;&#38134;&#34892;
+region.stock.daily.title=&#21306;&#22495;&#24403;&#26085;&#36164;&#37329;&#20986;&#36134;&#26126;&#32454;
 
