【新增】新增店员季报.

--- a/src/main/resources/messages/message_zh_CN.properties
+++ b/src/main/resources/messages/message_zh_CN.properties
@@ -99,6 +99,7 @@ user.email=&#30005;&#23376;&#37038;&#31665;
 user.phone=&#25163;&#26426;&#21495;&#30721;
 user.roles=&#35282;&#33394;&#21015;&#34920;&#10;&#10;
 user.btn.mpass=&#20462;&#25913;&#23494;&#30721;
+user.region=&#24402;&#23646;&#21306;&#22495;
 ## Stock
 stock.name=&#20179;&#24211;&#21517;&#31216;
 stock.parent=&#29238;&#20179;&#24211;
