【修复】翻译修复

--- a/src/main/resources/messages/message_zh_CN.properties
+++ b/src/main/resources/messages/message_zh_CN.properties
@@ -181,7 +181,7 @@ trade.stock.wmcgorder=&#22806;&#36152;&#37319;&#36141;&#21333;
 trade.stock.upload.cgorder=&#19978;&#20256;&#37319;&#36141;&#21333;
 trade.stock.type=&#31867;&#22411;
 trade.stock.type1=&#22806;&#36152;&#47;&#30334;&#36135;&#31867;
-trade.stock.type2=&#112;&#101;&#231;&#97;&#115;
+trade.stock.type2=&#38646;&#20214;
 trade.stpck.uplaod.upload.cgorder=&#19978;&#20256;&#37319;&#36141;&#21333;
 ## Order
 order.sn=&#35746;&#21333;&#21495;
