--- a/src/main/resources/messages/message_zh_CN.properties
+++ b/src/main/resources/messages/message_zh_CN.properties
@@ -61,9 +61,11 @@ mu.wms.stock.quarterly=&#20179;&#24211;&#24215;&#21592;&#23395;&#24230;&#25253;&
 mu.region.stock.quarterly=&#21306;&#22495;&#24215;&#38271;&#23395;&#24230;&#25253;&#34920;
 mu.order.verify=&#35746;&#21333;&#23457;&#26680;
 mu.trade.stock=&#36152;&#26131;&#37319;&#36141;
+mu.st.inventory=&#21830;&#21697;&#24211;&#23384;
+mu.pt.view=&#21830;&#21697;&#21015;&#34920;
 ## Message
-message.delete=&#30830;&#35748;&#21024;&#38500;&#10;&#10;
-message.select=&#35831;&#33267;&#23569;&#36873;&#20013;&#19968;&#26465;&#25968;&#25454;&#10;&#10;
+message.delete=&#30830;&#35748;&#21024;&#38500;
+message.select=&#35831;&#33267;&#23569;&#36873;&#20013;&#19968;&#26465;&#25968;&#25454;&#10;
 message.input=&#35813;&#36755;&#20837;&#39033;&#20026;&#24517;&#36755;&#39033;
 message.remove.cart=&#26159;&#21542;&#20174;&#36141;&#29289;&#36710;&#20013;&#31227;&#38500;&#25152;&#21246;&#36873;&#30340;&#21830;&#21697;
 message.goods.in.success=&#21830;&#21697;&#23548;&#20837;&#25104;&#21151;
