--- a/src/main/resources/messages/message_zh_CN.properties
+++ b/src/main/resources/messages/message_zh_CN.properties
@@ -47,7 +47,7 @@ mu.st.info=&#20179;&#24211;&#31649;&#29702;
 mu.st.out=&#21830;&#21697;&#20986;&#24211;
 mu.pt=&#21830;&#21697;&#31649;&#29702;
 mu.pt.info=&#21830;&#21697;&#20449;&#24687;
-mu.pt.type=&#21830;&#21697;&#31867;&#21035;
+mu.pt.type=&#31867;&#21035;&#21517;&#31216;
 mu.pt.prop=&#21830;&#21697;&#23646;&#24615;
 mu.pt.ppv=&#23646;&#24615;&#36873;&#39033;&#20540;
 mu.order=&#35746;&#21333;&#31649;&#29702;
@@ -63,6 +63,7 @@ mu.order.verify=&#35746;&#21333;&#23457;&#26680;
 mu.trade.stock=&#36152;&#26131;&#37319;&#36141;
 mu.st.inventory=&#21830;&#21697;&#24211;&#23384;
 mu.pt.view=&#21830;&#21697;&#21015;&#34920;
+mu.st.shunt=&#21830;&#21697;&#20998;&#27969;
 ## Message
 message.delete=&#30830;&#35748;&#21024;&#38500;
 message.select=&#35831;&#33267;&#23569;&#36873;&#20013;&#19968;&#26465;&#25968;&#25454;&#10;
@@ -126,7 +127,7 @@ product.info.type=&#21830;&#21697;&#31867;&#22411;
 ## Product
 product.state.normal=&#27491;&#24120;
 product.state.scarce=&#32570;&#36135;
-product.name=&#21830;&#21697;&#21517;
+product.name=&#21697;&#21517;
 product.stock=&#26435;&#23646;
 product.productType=&#31867;&#30446;
 product.code=&#36135;&#21697;&#32534;&#21495;
@@ -204,11 +205,11 @@ order.comment.time=&#35746;&#21333;&#23436;&#25104;&#26102;&#38388;
 order.btn.recive=&#30830;&#35748;&#25910;&#36135;
 order.btn.commit=&#35780;&#20215;
 ## Order Detail
-order.detail.list=&#68;&#101;&#116;&#97;&#108;&#108;&#101;&#115;&#32;&#100;&#101;&#108;&#32;&#112;&#101;&#100;&#105;&#100;&#111;
+order.detail.list=&#35746;&#21333;&#26126;&#32454;
 order.detail.image=&#22270;&#29255;
 order.detail.ptname=&#21830;&#21697;&#21517;
 order.detail.property=&#23646;&#24615;
-order.detail.amount=&#69;&#108;&#32;&#110;&#250;&#109;&#101;&#114;&#111;&#32;&#100;&#101;
+order.detail.amount=&#25968;&#37327;
 order.detail.volume.total=&#24635;&#20307;&#31215;
 ## Commit
 commit.waitcommit=&#24050;&#35780;&#20215;
