【维护】修复购物车BUG

--- a/src/main/resources/messages/message_zh_CN.properties
+++ b/src/main/resources/messages/message_zh_CN.properties
@@ -44,7 +44,7 @@ mu.sys.role=&#35282;&#33394;&#31649;&#29702;
 mu.sys.right=&#26435;&#38480;&#31649;&#29702;
 mu.st=&#24211;&#23384;&#31649;&#29702;
 mu.st.info=&#20179;&#24211;&#31649;&#29702;
-mu.st.out=&#21830;&#21697;&#20986;&#24211;
+mu.st.out=&#24215;&#38271;&#19979;&#21333;
 mu.pt=&#21830;&#21697;&#31649;&#29702;
 mu.pt.info=&#21830;&#21697;&#20449;&#24687;
 mu.pt.type=&#31867;&#21035;&#21517;&#31216;
@@ -188,7 +188,7 @@ trade.stock.type2=&#38646;&#20214;
 trade.stpck.uplaod.upload.cgorder=&#19978;&#20256;&#37319;&#36141;&#21333;
 ## Order
 order.sn=&#35746;&#21333;&#21495;
-order.store=&#38646;&#21806;&#24215;
+order.store=&#21306;&#22495;&#21517;&#31216;
 order.state=&#35746;&#21333;&#29366;&#24577;
 order.price.total=&#37329;&#39069;&#24635;&#35745;
 order.submit.time=&#19979;&#21333;&#26102;&#38388;
@@ -202,6 +202,7 @@ order.state.ddwc=&#35746;&#21333;&#23436;&#25104;
 order.state.ddgb=&#35746;&#21333;&#20851;&#38381;
 order.confirm.time=&#35746;&#21333;&#23436;&#25104;&#26102;&#38388;
 order.comment.time=&#35746;&#21333;&#23436;&#25104;&#26102;&#38388;
+order.ship.time=&#21457;&#36135;&#26102;&#38388;
 order.btn.recive=&#30830;&#35748;&#25910;&#36135;
 order.btn.commit=&#35780;&#20215;
 ## Order Detail
