--- a/src/main/resources/messages/message_zh_CN.properties
+++ b/src/main/resources/messages/message_zh_CN.properties
@@ -60,7 +60,8 @@ mu.stock.quarterly=&#24215;&#21592;&#23395;&#24230;&#30424;&#28857;&#34920;
 mu.wms.stock.quarterly=&#20179;&#24211;&#24215;&#21592;&#23395;&#24230;&#30424;&#28857;&#34920;
 mu.region.stock.quarterly=&#21306;&#22495;&#24215;&#38271;&#23395;&#24230;&#30424;&#28857;&#34920;
 mu.order.verify=&#35746;&#21333;&#23457;&#26680;
-mu.trade.stock=&#36152;&#26131;&#37319;&#36141;
+mu.trade.stock=\u8d38\u6613\u978b\u91c7\u8d2d
+mu.production.buyer=\u751f\u4ea7\u6027\u91c7\u8d2d
 mu.st.inventory=&#21830;&#21697;&#24211;&#23384;
 mu.pt.view=&#21830;&#21697;&#21015;&#34920;
 mu.st.shunt=&#21830;&#21697;&#20998;&#27969;
